# se.haxx.curl-curl

./: .build  .build01_windows32.sh  .build02_windows64.sh  .build03_linux32.sh  .build04_artefacts.sh  .build04_linux64.sh  .build05_artefacts.sh  .build_common.sh  .docker01_build_on_ubuntu_1604_for_windows.sh  .docker02_build_on_ubuntu_1204.sh  .docker03_build_on_ubuntu_1404.sh  .docker04_build_on_ubuntu_1604.sh  .docker05_build_on_ubuntu_1610.sh  .lxc01_build_windows.sh  .lxc02_build_ubuntu_1204_x64.sh  .lxc03_build_ubuntu_1204_x86.sh  .lxc04_build_ubuntu_1404_x64.sh  .lxc05_build_ubuntu_1404_x86.sh  .lxc06_build_ubuntu_1604_x64.sh  .lxc07_build_ubuntu_1604_x86.sh  .lxc08_build_ubuntu_1610_x64.sh  .lxc09_build_ubuntu_1610_x86.sh  .lxc_build_all.sh  .lxc_build_artefacts.sh  .lxc_build_ubuntu_1204_x64.sh  .lxc_build_ubuntu_1204_x86.sh  .lxc_build_ubuntu_1404_x64.sh  .lxc_build_ubuntu_1404_x86.sh  .lxc_build_ubuntu_1604_x64.sh  .lxc_build_ubuntu_1604_x86.sh  .lxc_build_ubuntu_1610_x64.sh  .lxc_build_ubuntu_1610_x86.sh  .lxc_build_ubuntu_1704_x64.sh  .lxc_build_ubuntu_1704_x86.sh  .lxc_build_ubuntu_1710_x64.sh  .lxc_build_ubuntu_1710_x86.sh  .lxc_build_windows.sh  CMakeLists.txt  Jenkinsfile  build_artifact.py  (+1 more)
.github/workflows/: main.yml
cmake/: platform.cmake
curl/: CMakeLists.txt  __README__.txt  config.cmake.in  curl-7.53.1.tar.bz2
curl/installer/: CMakeLists.txt  curl.xml  install.lua  install_linux.lua  install_windows.lua
curl/patches/: 001_build_cmake_package.diff  002_find_zlib_required_config.diff  002_use_zlib_from_jonchki.diff  003_use_local_libssh2_component.diff
docker/: Dockerfile_mbs_ubuntu_1204  Dockerfile_mbs_ubuntu_1404  Dockerfile_mbs_ubuntu_1604  Dockerfile_mbs_ubuntu_1610
jonchki/: jonchkicfg.xml  jonchkihere.py
